[gd_scene load_steps=4 format=3 uid="uid://bdfh4ruvwppgd"]

[ext_resource type="Texture2D" uid="uid://db3l8wevjleki" path="res://scenes/monsters/art/brown-monster-test.png" id="1_4dc3w"]
[ext_resource type="Script" uid="uid://klroqwgpfsov" path="res://scenes/monsters/brown_monster.gd" id="1_ihqnq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ihqnq"]
radius = 16.0

[node name="BrownMonster" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
lock_rotation = true
script = ExtResource("1_ihqnq")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
rotation = -1.553343
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_4dc3w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ihqnq")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.5
direction = Vector2(0, -1)
initial_velocity_min = 256.0
initial_velocity_max = 320.0
scale_amount_min = 8.0
scale_amount_max = 16.0
color = Color(0, 0, 0, 1)

[node name="EmergeTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="ForecastTimer" type="Timer" parent="."]
one_shot = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
